# network-monitoring

./: README.md  alert  docker-compose.yml
api/: .env  go.sum  main.go  pyproject.toml
api/src/: .env  app.py  dto.py  settings.py
app/: Dockerfile  go.mod  go.sum
app-py/: pyproject.toml
app-py/nm/: main.py  response.py  runner.py  state.py
app-py/nm/controllers/: alerts.py  routers.py  rules.py
app-py/nm/models/: rule.py
app-py/nm/services/: _base.py  alert.py  router.py  rule.py
app-py/tests/: conftest.py  test_rules.py
app/cmd/api/: main.go
app/common/: response.go  utils.go
app/controllers/: alerts.go  dashboard.go  routers.go  rules.go
app/nm/: main.py  response.py  runner.py  settings.py
app/nm/models/: alert.py  router.py  rule.py
app/nm/services/: _base.py  router.py
app/services/: alerts.go  dashboard.go  router.go  rule.go
app/tests/: conftest.py  test_main.py  test_routers.py
clickhouse/: create.sql  init.sql
clickhouse/config.d/: listen_host.xml  log_disable.xml
clickhouse/initdb.d/: 01-databases.sql  01-tables.sql  02-dictionaries.sql  02-tables.sql  03-dictionaries.sql  03-functions.sql  04-functions.sql  04-grafana.sql  05-prefixes.sql  05-views.sql  06-materialized-views.sql  07-extra.sql  07-users.sql
grafana/: grafana.ini
grafana/dashboards/: traffic-for-prefix.json  traffic-mbps.json  traffic-pps.json  traffic-prefixes.json
grafana/provisioning/datasources/: default.yml
postgres/: init.sql
vector/: flow.proto  vector.toml
