[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "clickhouse-connect>=0.8.16",
    "fastapi[all]>=0.115.12",
    "pandas>=2.2.3",
    "polars>=1.27.0",
    "pyarrow>=19.0.1",
    "python-ulid>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "asyncpg-stubs>=0.30.1",
    "mypy>=1.15.0",
    "ruff>=0.11.4",
]

[tool.ruff.lint]
extend-select = ["I"]
